# BS3D

./: .gitignore  README.md  preprocess.py  record.py
configs/: create_config.py  multi-session.ini  single-session.ini
preprocess/: CMakeLists.txt  happly.h  kinect.cpp  kinect.hpp
